<package format="2">
  <name>interactive_marker_twist_server</name>
  <version>2.1.0</version>
  <description>Interactive control for generic Twist-based robots using interactive markers</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros-visualization/interactive_marker_twist_server</url>
  <url type="bugtracker">https://github.com/ros-visualization/interactive_marker_twist_server/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>